# Auth-service

./: .pre-commit-config.yaml  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_18_2235-392173ff287c_create_user.py  2025_03_19_0228-5ef575ad004b_user_add_field_email.py  2025_03_19_0232-e017e79786b5_refactor_created_at_updated_at_datetime_.py  2025_03_20_1826-99ee5d8dc164_init_fastapi_models.py  2025_03_21_1824-fc4f708a6c59_create_customuser.py
auth/: dao.py  models.py  routers.py  schemas.py  utils.py
core/: __init__.py  dao.py  database.py  dependencies.py  settings.py  utils.py
custom_auth/: __init__.py  dao.py  dependencies.py  exceptions.py  managers.py  models.py  routers.py  schemas.py
tests/unit_tests/: test_core.py
